--- a/src/app/components/articles/article/title/title.component.scss
+++ b/src/app/components/articles/article/title/title.component.scss
@@ -33,18 +33,9 @@
     font-family: "Glam-queen";
     font-size: 3em;
   }
-
-  .leads {
-    margin-top: 10px;
-    font-size: 14px;
-    color: $main-text-color;
-    margin-top: $big-border;
-  }
-
-  .author {
-    margin-top: 10px;
-    font-size: 14px;
-    color: $main-text-color;
+  
+  .published {
+    font-size: 12px;
   }
 }
 
