Adding interceptor and storageUser and token

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,6 +10,8 @@
         <li class="about-us">
             <a routerLink="/about-us">A propos</a>
         </li>
+        <!-- Deconnection temporaire-->
+        <li (click)="deleteToken()">&nbsp;- deconection</li>
     </ul>
     <div id="marquee">Sugar Rush - 2023 - L'information décryptée sur le sucre </div>
 
