--- a/src/app/components/paragraph/paragraph.component.scss
+++ b/src/app/components/paragraph/paragraph.component.scss
@@ -9,11 +9,13 @@
 
     h4 {
         font-size: 16px;
-        margin-bottom: 5px;
+
+        margin-bottom: 2rem;
         color: $secondary-text-color;
     }
 
     p {
+
         margin-bottom: 10px;
     }
 
@@ -52,4 +54,10 @@
 
 [class$="conclusion"]+p {
     font-weight: bolder;
+}
+
+h4+p {
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+
 }
