sugar-meter-pipe is working

--- a/src/app/components/sugar-data/sugar-data.component.html
+++ b/src/app/components/sugar-data/sugar-data.component.html
@@ -1,59 +1,4 @@
-<!-- Pile de sucres qui se colorit en fonction du nombre de sucres dans le profile ce jour ci  fill="#FECEE9" stroke="#FECEE9" stroke-width="14.525"-->
+<!-- Pile de sucres qui se colorit en fonction du nombre de sucres dans le profile ce jour ci -->
 <section class="meter-section-svg">
-  <div class="test" [innerHTML]="12.4 | sugarmeter"></div>
-  <div class="meter-svg">
-    <svg #svgElement *ngFor="let i of [0,1,2,3,4,5,6,7]" class="svg-class svg-class-{{i}}" fill="#FECEE9" stroke="#FECEE9" stroke-width="14.525" version="1.1"
-      xmlns="http://www.w3.org/2000/svg" viewBox="0 0 415.00 415.00" xmlns:xlink="http://www.w3.org/1999/xlink"
-      enable-background="new 0 0 415 415"
-      transform="matrix(-1, 0, 0, -1, 0, 0)rotate(0)" width="800%">
-      <defs>
-        <linearGradient id="Gradient1">
-          <stop class="stop1" offset="0%" />
-          <stop class="stop2" offset="50%" />
-          <stop class="stop3" offset="100%" />
-        </linearGradient>
-        <style>
-          .svg-class {
-            fill: url(#Gradient1);
-            stroke: url(#Gradient1);
-          }
-
-          .stop1 {
-            stop-color: red;
-          }
-
-          .stop2 {
-            stop-color: black;
-
-          }
-
-          .stop3 {
-            stop-color: blue;
-          }
-        </style>
-      </defs>
-      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-      <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="4.15">
-      </g>
-      <g id="SVGRepo_iconCarrier">
-        <g>
-          <circle cx="83" cy="312.171" r="7.5"></circle>
-          <circle cx="53" cy="282.171" r="7.5"></circle>
-          <circle cx="251.995" cy="362" r="7.5"></circle>
-          <circle cx="332" cy="189.868" r="7.5"></circle>
-          <circle cx="362" cy="219.868" r="7.5"></circle>
-          <circle cx="332" cy="93.741" r="7.5"></circle>
-          <path
-            d="M37.5,400H15V15h75.5c4.142,0,7.5-3.358,7.5-7.5S94.642,0,90.5,0h-83C3.358,0,0,3.358,0,7.5v400c0,4.142,3.358,7.5,7.5,7.5 h30c4.142,0,7.5-3.358,7.5-7.5S41.642,400,37.5,400z">
-          </path>
-          <path
-            d="m407.5,317c-4.143,0-7.5,3.358-7.5,7.5v75.5h-332.5c-4.142,0-7.5,3.358-7.5,7.5s3.358,7.5 7.5,7.5h340c4.143,0 7.5-3.358 7.5-7.5v-83c0-4.142-3.357-7.5-7.5-7.5z">
-          </path>
-          <path
-            d="m407.5,0h-287c-4.142,0-7.5,3.358-7.5,7.5s3.358,7.5 7.5,7.5h279.5v279.5c0,4.142 3.357,7.5 7.5,7.5s7.5-3.358 7.5-7.5v-287c0-4.142-3.357-7.5-7.5-7.5z">
-          </path>
-        </g>
-      </g>
-    </svg>
-  </div>
+  <div class="meter-svg" [innerHTML]="sugarDatas | sugarMeter : profile.logo : age"></div>
 </section>
