--- a/src/app/components/sugar-data/sugar-data.component.scss
+++ b/src/app/components/sugar-data/sugar-data.component.scss
@@ -4,12 +4,8 @@
   height: 100%;
 
   .meter-svg {
-    height: 100%;
-
-    svg {
-      height: 50px;
-      width: 50px;
-    }
+    display: flex;
+    justify-content: center;
   }
 }
 
