--- a/src/app/components/sugar-inputs/sugar-inputs.component.scss
+++ b/src/app/components/sugar-inputs/sugar-inputs.component.scss
@@ -6,7 +6,7 @@
   .meter-inputs {
     display: flex;
     flex-direction: column;
-    // justify-content: center;
+    align-items: center;
 
     ul {
       list-style-type: none;
