--- a/src/app/pages/profiles/profiles.component.scss
+++ b/src/app/pages/profiles/profiles.component.scss
@@ -7,15 +7,14 @@
 
   h2 {
     text-align: center;
-    font-size: 1.2rem;
-    color: $fairy-color;
+    font-size: 1rem;
+    color: $secondary-text-color;
     padding-top: $main-border;
     padding-bottom: $main-border;
   }
 
   .sugar-meter-children {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: block;
   }
 
   .meter-reaction {
