Adding an observable to check if connected

--- a/src/app/components/articles/article/comment/comment.component.scss
+++ b/src/app/components/articles/article/comment/comment.component.scss
@@ -35,6 +35,11 @@
   }
 }
 
+.connect-link {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .fun-button {
   background-color: $category-fun-color;
 }
