--- a/src/app/components/articles/article/comment/comment.component.html
+++ b/src/app/components/articles/article/comment/comment.component.html
@@ -2,9 +2,9 @@
 <h2 class="{{article.category.slug}}-background">Commentaires</h2>
 <app-comment *ngFor="let comment of _comments" [comment]="comment" [categorySlug]="article.category.slug" (commentDeleted)="onCommentDeleted($event)">
 </app-comment>
-
-<form #commentForm="ngForm" (ngSubmit)="createComment(commentForm)" class="comment-form">
+<form *ngIf="connectionStatus | async" #commentForm="ngForm" (ngSubmit)="createComment(commentForm)" class="comment-form">
     <textarea [(ngModel)]="commentForm.value.content" name="content" class="textArea" maxlength="255" rows="4" cols="50" required></textarea>
     <button class="submitButton {{article.category.slug}}-button" type="submit">Ajouter un commentaire</button>
 </form>
+<div *ngIf="!(connectionStatus | async)">Vous devez être connecté pour poster un commentaire. <span (click)="openModal()" class="{{article.category.slug}}-color connect-link">Connectez vous !</span></div>
 </section>
