--- a/src/app/components/user/connection/connection.component.html
+++ b/src/app/components/user/connection/connection.component.html
@@ -11,16 +11,11 @@
           <input type="password" formControlName="password">
         </div>
         <div class="login-btn">
-          <button mat-button [mat-dialog-close]="true" type="submit">Connection</button>
+          <button mat-button [mat-dialog-close]="true" type="submit">Connexion</button>
         </div>
       </form>
     </div>
   </mat-tab>
-
-  <mat-form-field>
-    <mat-label>Snack bar duration (seconds)</mat-label>
-    <input type="number" [(ngModel)]="durationInSeconds" matInput>
-  </mat-form-field>
 
   <mat-tab label="Inscription">
     <div class="register">
@@ -61,7 +56,7 @@
           </div>
         </div>
         <div class="register-button">
-          <button mat-button [mat-dialog-close]="true" [disabled]="!userForm.valid" type="submit">Connection</button>
+          <button mat-button [mat-dialog-close]="true" [disabled]="!userForm.valid" type="submit">Inscription</button>
         </div>
       </form>
     </div>
