--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,5 @@
 @use "/src/_import.scss" as *;
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 @media screen and (min-width: $min-width-desktop) {
   #head {
@@ -47,6 +48,14 @@
 
     li {
       height: 70px;
+    }
+
+    .username {
+      color: $fairy-color;
+    }
+    .menu {
+      border : none;
+      background-color: none;
     }
 
     nav ul li :hover {
