--- a/src/sugar-meter.scss
+++ b/src/sugar-meter.scss
@@ -6,6 +6,10 @@
   background-color: var(--color);
 }
 
+.svg-half {
+  background: linear-gradient(to left, $fairy-color var(--half), var(--color) var(--half));
+}
+
 .svg-sugar {
   -webkit-mask-image: url("./assets/logo/sugar-logo.svg");
   mask-image: url("./assets/logo/sugar-logo.svg");
