Adding infinite scroll and new system for article main and side

--- a/src/app/components/articles/article/other/other.component.html
+++ b/src/app/components/articles/article/other/other.component.html
@@ -1,7 +1,7 @@
 <section *ngIf="articles" class="other">
     <h2 class="{{categorySlug}}">Articles liés</h2>
     <div class="article-list">
-      <app-article-type-side class="type-side" [article]="article" *ngFor="let article of articles.slice(0,3)" ></app-article-type-side>
+      <app-article-type-side class="type-side" [article]="article" *ngFor="let article of articles" ></app-article-type-side>
     </div>
   </section>
   
