--- a/src/app/pages/articles/articles.component.scss
+++ b/src/app/pages/articles/articles.component.scss
@@ -5,6 +5,7 @@
   .main-title {
     margin-top: $big-border;
     margin-bottom: $big-border;
+    color: $secondary-text-color;
   }
 
   .top {
@@ -17,6 +18,7 @@
       h2 {
         margin: 0;
         padding-bottom: $main-border;
+        color: $secondary-text-color;
       }
     }
   }
@@ -38,6 +40,7 @@
   .main-title {
     margin-top: $big-border;
     margin-bottom: $big-border;
+    color: $secondary-text-color;
   }
 
   .top {
