--- a/src/app/pages/articles/articles.component.html
+++ b/src/app/pages/articles/articles.component.html
@@ -1,17 +1,14 @@
 <h1 class="main-title">Sugar Rush : Votre actu sucrée au quotidien !</h1>
 <div *ngIf="articles" class="top">
-    <app-article-type-main [article]="articles[0]" class="main"></app-article-type-main>
+    <app-article-type-main [article]="mainArticle" class="main"></app-article-type-main>
     <div class="side">
-        <h2>Plus de <span class="{{articles[0].category.slug}}-color">{{articles[0].category.name}}</span></h2>
-        <app-article-type-side [article]="article" *ngFor="let article of getSideArticles()" ></app-article-type-side>
+        <h2>Plus de <span class="{{mainArticle.category.slug}}-color">{{mainArticle.category.name}}</span></h2>
+        <app-article-type-side [article]="article" *ngFor="let article of articlesSide" ></app-article-type-side>
     </div>
 </div>
-<div *ngIf="articles" class="small">
-    <app-article-type-small class="article-small" *ngFor="let article of articles.slice(0, 3); let i = index" [article]="article" [pos]="(i % 3) + 1"></app-article-type-small>
-</div>
-<div *ngIf="articles" class="small">
-    <app-article-type-small class="article-small" *ngFor="let article of articles.slice(3, 6); let i = index" [article]="article" [pos]="(i % 3) + 1"></app-article-type-small>
-</div>
-<div *ngIf="articles" class="small">
-    <app-article-type-small class="article-small" *ngFor="let article of articles.slice(6, 9); let i = index" [article]="article" [pos]="(i % 3) + 1"></app-article-type-small>
+<div infinite-scroll
+[infiniteScrollDistance]="2"
+[infiniteScrollThrottle]="1000"
+(scrolled)="onScroll()" *ngIf="articles" class="small">
+    <app-article-type-small class="article-small" *ngFor="let article of articles; let i = index" [article]="article" [pos]="(i % 3) + 1"></app-article-type-small>
 </div>
