--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -4,7 +4,10 @@
       <span>{{category.name}}</span>
     </h1>
   </div>
-  <div class="category-articles">
+  <div class="category-articles" infinite-scroll
+  [infiniteScrollDistance]="2"
+  [infiniteScrollThrottle]="1000"
+  (scrolled)="onScroll()">
     <app-article-type-small [article]="article" *ngFor="let article of articles; let i = index" [pos]="(i % 3) + 1"
       class="category-article"></app-article-type-small>
   </div>
