Pipe const and sugar amount pipe

--- a/src/app/components/sugar-data/sugar-data.component.scss
+++ b/src/app/components/sugar-data/sugar-data.component.scss
@@ -6,6 +6,8 @@
   .meter-svg {
     display: flex;
     justify-content: center;
+    padding-top: $big-border;
+    padding-bottom: $big-border;
   }
 }
 
