--- a/src/app/pages/users/sugar-meter/sugar-meter.component.scss
+++ b/src/app/pages/users/sugar-meter/sugar-meter.component.scss
@@ -17,8 +17,7 @@
 
     .meter-description-title {
       z-index: 2;
-      background-color: white;
-      color: $fairy-color;
+      color: $secondary-text-color;
       text-align: center;
       font-size: 1.5rem;
       font-family: "Glam-queen";
