--- a/src/app/components/sugar-inputs/sugar-inputs.component.scss
+++ b/src/app/components/sugar-inputs/sugar-inputs.component.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: $small-border;
 
     ul {
       list-style-type: none;
