--- a/src/app/pages/profiles/profiles.component.scss
+++ b/src/app/pages/profiles/profiles.component.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  color: $secondary-text-color;
 
   h2 {
     text-align: center;
@@ -15,12 +16,12 @@
 
   .sugar-meter-children {
     display: block;
-  }
-
-  .meter-reaction {
     text-align: center;
-    color: $secondary-text-color;
-    font-size: 1rem;
+
+    .meter-reaction {
+      font-size: 1rem;
+      display: block;
+    }
   }
 
   .profile-modification {}
