establishment of observable in connection/header/comment components

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,15 +12,15 @@
             {{category.name}}
           </a>
         </li>
-        <li *ngIf="isLoggedIn | async"><a id="login" class="username">{{usernameUser | async}}<i class="fa fa-user" aria-hidden="true"></i></a>
-          <button mat-icon-button [matMenuTriggerFor]="menu" class="menu">
-            <mat-icon>keyboard_arrow_down</mat-icon>
-          </button>
+        <li *ngIf="user | async" [matMenuTriggerFor]="menu"><a id="login">{{(user | async)?.userStringName}}<i
+              class="fa fa-user" aria-hidden="true"></i></a>
+
           <mat-menu #menu="matMenu">
-            <button mat-menu-item [routerLink]="APP_ROUTES.personalAccount">Mon compte</button>
+            <button mat-menu-item [routerLink]="APP_ROUTES.detailUser">Mon compte</button>
             <button mat-menu-item (click)="logout()">Déconnexion</button>
-          </mat-menu></li>
-        <li *ngIf="!(isLoggedIn | async)"><a id="login" (click)="openModal()">Connexion<i class="fa fa-user"
+          </mat-menu>
+        </li>
+        <li *ngIf="!(user | async)"><a id="login" (click)="openModal()">Connexion<i class="fa fa-user"
               aria-hidden="true"></i></a></li>
       </ul>
     </nav>
