--- a/src/app/pages/users/sugar-meter/sugar-meter.component.scss
+++ b/src/app/pages/users/sugar-meter/sugar-meter.component.scss
@@ -48,6 +48,17 @@
       padding-bottom: $main-border;
     }
   }
+
+  .example-tab-icon {
+    width: 20px;
+    height: 20px;
+    background-color: $secondary-text-color;
+  }
+
+  .connection-group {
+    padding-bottom: $main-border;
+    border-bottom: $secondary-text-color 2px solid;
+  }
 }
 
 @media only screen and (min-width: $min-width-desktop) and (max-width: 1024px) {
