--- a/src/app/pages/profiles/profiles.component.scss
+++ b/src/app/pages/profiles/profiles.component.scss
@@ -25,6 +25,8 @@
   }
 
   .profile-modification {
+    margin-top: $small-border;
+
     .example-tab-icon {
       width: 20px;
       height: 20px;
