--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,6 +14,7 @@
         </li>
 
         <li><a id="login" (click)="openModal()">Connexion<i class="fa fa-user" aria-hidden="true"></i></a></li>
+        <li><a routerLink="/creation">Creation d'Article</a></li>
       </ul>
     </nav>
   </div>
