Changing dropdown menu

--- a/src/app/pages/creation-article/creation-article.component.html
+++ b/src/app/pages/creation-article/creation-article.component.html
@@ -28,7 +28,7 @@
                 <label for="type" class="type">Type : </label>
                 <select class="target">
                     <option>Introduction</option>
-                    <option>Contenu</option>
+                    <option>Paragraphe</option>
                     <option>Conclusion</option>
                 </select>
             </div>
