everything works but its ugly (a bit)

--- a/src/app/pages/profiles/profiles.component.html
+++ b/src/app/pages/profiles/profiles.component.html
@@ -46,6 +46,8 @@
         <button [disabled]="!profileModificationForm.valid && profileModificationForm.dirty"
           type="submit">Valider</button>
       </form>
+
+      <button (click)="deleteProfile()">Supprimer profil</button>
     </mat-expansion-panel>
   </div>
 </section>
