--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,6 +1,6 @@
 <form class="search-from" [formGroup]="searchForm" >
     <div class="search-container">
-        <input type="text" formControlName="searchTerm" placeholder="Search">
+        <input type="text" formControlName="searchTerm" placeholder="Rechercher">
         <button [routerLink]="APP_ROUTES.search" [queryParams]="getQueryParams()" class="search-icon">
           <i class="fa fa-search"></i>
         </button>
