--- a/src/app/components/user/information/information.component.html
+++ b/src/app/components/user/information/information.component.html
@@ -1,5 +1,6 @@
+<h2>Informations Personnelles</h2>
 <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
-    <div class="example-container">
+    <div class="example-container form-field-container">
         <mat-form-field appearance="fill">
             <mat-label>Entrer votre nom</mat-label>
             <input matInput placeholder="Nom" formControlName="lastName" required>
@@ -26,10 +27,12 @@
         </mat-form-field>
 
         <mat-form-field appearance="fill">
-            <mat-label>Confirmez votre mot de passe</mat-label>
+            <mat-label>Confirmez votre nouveau mot de passe</mat-label>
             <input matInput type="password" placeholder="Mot de passe" formControlName="password" required>
         </mat-form-field>
     </div>
-
-    <button type="submit" class="button">Submit</button>
+    <div class="buttons">
+        <button type="submit" class="update-btn">Mettre à jour le compte</button>
+        <button type="submit" class="delete-btn" (click)="handleDelete()">Supprimer le compte</button>
+    </div>
 </form>
