--- a/src/app/components/user/information/information.component.scss
+++ b/src/app/components/user/information/information.component.scss
@@ -1,14 +1,57 @@
 @use "/src/_import.scss" as *;
 
-.example-container .mat-form-field + .mat-form-field {
-    margin-left: 8px;
-  }
+.example-container {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
 
-.button {
-    align-items: center;
-    color: $secondary-text-color;
-    border : none;
-    border-radius: $big-border;
-    background-color: $fairy-color;
-    padding: $main-border;
+.form-field-container {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.mat-form-field {
+    width: 70%;
+}
+
+h2 {
+    font-family: "Glam-queen";
+    font-size: 3rem;
+    color: $fairy-color;
+    text-align: center;
+    margin-bottom: $main-border;
+}
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 16px;
+    margin-top: $big-border;
+
+    .update-btn {
+        color: $secondary-text-color;
+        background-color: $fairy-color;
+        padding: $main-border;
+        border: none;
+        border-radius: $big-border;
+    }
+
+    .update-btn:hover {
+        background-color: darken($fairy-color, 10%);
+        color: $main-text-color;
+    }
+
+    .delete-btn {
+        background-color: $category-economy-color;
+        border: none;
+        padding: $main-border;
+        border-radius: $big-border;
+    }
+
+    .delete-btn:hover {
+        background-color: darken($category-economy-color, 10%);
+        color: $main-text-color;
+    }
 }
