--- a/src/app/components/paragraph/paragraph.component.scss
+++ b/src/app/components/paragraph/paragraph.component.scss
@@ -1,18 +1,21 @@
 @use "/src/_import.scss" as *;
 
-
-[class$="introduction"]+p {
-    font-weight: bold;
-    font-style: italic;
-
+.introduction {
+    margin-bottom: $main-border;
+    p {
+        font-weight: bold;
+        font-style: italic;
+    }
 }
 
-[class$="conclusion"]+p {
-    font-weight: bolder;
+.conclusion {
+    p {
+        font-weight: bolder;
+    }
 }
 
 h4+p {
-    margin-top: 0.5rem;
-    margin-bottom: 1rem;
+    margin-top: $small-border;
+    margin-bottom: $main-border;
 
 }
