--- a/src/app/components/user/information/information.component.html
+++ b/src/app/components/user/information/information.component.html
@@ -3,32 +3,32 @@
     <div class="example-container form-field-container">
         <mat-form-field appearance="fill">
             <mat-label>Entrer votre nom</mat-label>
-            <input matInput placeholder="Nom" formControlName="lastName" required>
+            <input matInput placeholder={{user.lastName}} formControlName="lastName">
         </mat-form-field>
 
         <mat-form-field appearance="fill">
             <mat-label>Entrez votre prénom</mat-label>
-            <input matInput placeholder="Prénom" formControlName="firstName" required>
+            <input matInput placeholder={{user.firstName}} formControlName="firstName" >
         </mat-form-field>
 
         <mat-form-field appearance="fill">
             <mat-label>Entrez votre adresse mail</mat-label>
-            <input matInput placeholder="Adresse mail" formControlName="email" required>
+            <input matInput placeholder={{user.email}} formControlName="email">
         </mat-form-field>
 
         <mat-form-field appearance="fill">
             <mat-label>Entrez votre ancien mot de passe</mat-label>
-            <input matInput type="password" placeholder="Mot de passe" formControlName="password" required>
+            <input matInput type="password" placeholder="Mot de passe">
         </mat-form-field>
 
         <mat-form-field appearance="fill">
             <mat-label>Entrez votre nouveau mot de passe</mat-label>
-            <input matInput type="password" placeholder="Mot de passe" formControlName="password" required>
+            <input matInput type="password" placeholder="Nouveau mot de passe" formControlName="password">
         </mat-form-field>
 
         <mat-form-field appearance="fill">
             <mat-label>Confirmez votre nouveau mot de passe</mat-label>
-            <input matInput type="password" placeholder="Mot de passe" formControlName="password" required>
+            <input matInput type="password" placeholder="Confirmer mot de passe">
         </mat-form-field>
     </div>
     <div class="buttons">
